--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -2,6 +2,8 @@ name: Python Package using Conda
 
 on: [push]
 
+export AGENT_TOOLSDIRECTORY=/opt/hostedtoolcache
+
 jobs:
   build-linux:
     runs-on: ubuntu-latest
