--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Install Dependencies
       - run: |
          npm install
-         echo main.py noura 1-1-1993 ""
+         python main.py noura 1-1-1993 ""
